--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Portfolioของผม</title>
+        <title>portfolio</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
