--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>portfolio</title>
+        <title>Portfolioของผม</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width,   initial-scale=1.0">
     </head>
@@ -11,5 +11,14 @@
             <p>i'm a new dev and this is a first cool web bruh</p>
             <button onclick="alert('thx for visit my web bro')">press for your life</button>
         </div>
+        <nav  class="navbar">
+            <div class="logo">MyPortfolio</div>
+            <ul class="nav-links">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </body>
 </html>
