--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Portfolio</title>
+        <title>Portfolioของผม</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width,   initial-scale=1.0">
     </head>
     <body>
+        <script src="sybau.js"></script>
         <div class="container">
             <h1>Hi i'm BaNnANa</h1>
             <p>i'm a new dev and this is a first cool web bruh</p>
@@ -20,5 +21,10 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <section>
+            <h2 id="message">ค่าเสือกมันแพงนะเฮีย</h2>
+            <button onclick="Kuaytok()">sybau</button>
+        </section>
+        
     </body>
 </html>
