--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width,   initial-scale=1.0">
     </head>
     <body>
-        <script src="sybau.js"></script>
         <div class="container">
             <h1>Hi i'm BaNnANa</h1>
             <p>i'm a new dev and this is a first cool web bruh</p>
@@ -23,8 +22,8 @@
         </nav>
         <section>
             <h2 id="message">ค่าเสือกมันแพงนะเฮีย</h2>
-            <button onclick="Kuaytok()">sybau</button>
+            <button onclick="changeText()">sybau</button>
         </section>
-        
+        <script src="script.js"></script>
     </body>
 </html>
