--- a/home.html
+++ b/home.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home</title>
+        <title>bitch.com</title>
+        <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width,   initial-scale=1.0">
     </head>
     <body>
-        <style>
-            body{
-                font-family: Arial, Helvetica, sans-serif;
-                color: black;
-            }
-        </style>
-        <h1>มาดูอะไร</h1>
-        <li><a href="index.html">Contact</a></li>
+        <div class="container">
+            <h1>เฮียอยากรู้ป่ะละ</h1>
+            <p>ค่าเสือกมันแพงนะเฮีย</p>
+            <nav class="navbar">
+                <div class="logo">งั้น</div>
+                <ul class="nav-links">
+                    <li><a href="index.html">กูจ่ายค่าเสือก</a></li>
+                     <li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">กูไม่จ่าย</a></li>
+                </ul>
+            </nav>
+        </div>
     </body>
 </html>
