--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
                      <li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">กูไม่จ่าย</a></li>
                 </ul>
             </nav>
+            <button onclick="alert('เสือก')">press for your money</button>
         </div>
     </body>
 </html>
