--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="th">
     <head>
         <title>Portfolioของผม</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width,   initial-scale=1.0">
     </head>
     <body>
-        <nav  class="navbar">
+       <nav  class="navbar">
             <div class="logo">MyPortfolio</div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
@@ -20,10 +20,10 @@
             <p>i'm a new dev and this is a first cool web bruh</p>
             <button onclick="alert('thx for visit my web bro')">press for your life</button>
         </div>
-        <section>
-            <h2 id="message">ค่าเสือกมันแพงนะเฮีย</h2>
-            <button onclick="changeText()">sybau</button>
-        </section>
         <script src="script.js"></script>
+        <section class="section-toggle">
+            <h2 id="secretText" class="hidden">ค่าเสือกมันแพงนะเฮีย</h2>
+            <button id="toggleBtn">sybau</button>
+        </section>
     </body>
 </html>
