--- a/home.html
+++ b/home.html
@@ -16,7 +16,11 @@
                      <li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">กูไม่จ่าย</a></li>
                 </ul>
             </nav>
-            <button onclick="alert('เสือก')">press for your money</button>
+             <section class="section-toggle">
+            <h2 id="secretText" class="hidden">ค่าเสือกมันแพงนะเฮีย</h2>
+            <button id="toggleBtn">sybau</button>
+            </section>
         </div>
+    <script src="script.js"></script>
     </body>
 </html>
