--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
             <h1>เฮียอยากรู้ป่ะละ</h1>
             <p>ค่าเสือกมันแพงนะเฮีย</p>
             <nav class="navbar">
-                <div class="logo">งั้น</div>
+                <div class="logo">งั้น:</div>
                 <ul class="nav-links">
                     <li><a href="index.html">กูจ่ายค่าเสือก</a></li>
                      <li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">กูไม่จ่าย</a></li>
