--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <button id="themeToggle">เปลี่ยนธีม</button>
         <div class="container">
             <h1>Hi i'm BaNnANa</h1>
             <p>i'm a new dev and this is a first cool web bruh</p>
