--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <h1>I HATE NIGGA</h1>
         <button id="themeToggle">เปลี่ยนธีม</button>
         <div class="container">
             <h1>Hi i'm BaNnANa</h1>
@@ -24,6 +25,12 @@
         <section class="section-toggle">
             <h2 id="secretText" class="hidden">ค่าเสือกมันแพงนะเฮีย</h2>
             <button id="toggleBtn">sybau</button>
+        </section>
+        <section class="form-note">
+            <h2>note</h2>
+            <input type="text" id="noteInput" placeholder="text here">
+            <button onclick="saveNote()" >save!</button>
+            <p id="saveNote">show note</p>
         </section>
     <script src="script.js"></script>
     </body>
