--- a/index.html
+++ b/index.html
@@ -15,21 +15,60 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <h1>I HATE NIGGA</h1>
+        <h1>I HATE NUGGETS</h1>
         <button id="themeToggle">เปลี่ยนธีม</button>
         <div class="container">
             <h1>Hi i'm BaNnANa</h1>
             <p>i'm a new dev and this is a first cool web bruh</p>
-            <button onclick="alert('thx for visit my web bro')">press for your life</button>
+            <!-- From Uiverse.io by OliverZeros --> 
+            <button class="button button-item" onclick="alert('ควย')">
+            <span class="button-bg">
+                <span class="button-bg-layers">
+                    <span class="button-bg-layer button-bg-layer-1 -purple"></span>
+                        <span class="button-bg-layer button-bg-layer-2 -turquoise"></span>
+                        <span class="button-bg-layer button-bg-layer-3 -yellow"></span>
+                    </span>
+                </span>
+            <span class="button-inner">
+                <span class="button-inner-static">press for your life</span>
+                <span class="button-inner-hover">press for your life</span>
+            </span>
+            </button>
+
         </div>
         <section class="section-toggle">
             <h2 id="secretText" class="hidden">ค่าเสือกมันแพงนะเฮีย</h2>
-            <button id="toggleBtn">sybau</button>
+            <button class="button button-item" id="toggleBtn">
+                <span class="button-bg">
+                <span class="button-bg-layers">
+                    <span class="button-bg-layer button-bg-layer-1 -purple"></span>
+                        <span class="button-bg-layer button-bg-layer-2 -turquoise"></span>
+                        <span class="button-bg-layer button-bg-layer-3 -yellow"></span>
+                    </span>
+                </span>
+            <span class="button-inner">
+                <span class="button-inner-static">sybau</span>
+                <span class="button-inner-hover">sybau</span>
+            </span>
+            </button>
         </section>
         <section class="form-note">
             <h2>note</h2>
             <input type="text" id="noteInput" placeholder="text here">
-            <button onclick="saveNote()" >save!</button>
+            <button class="button button-item" onclick="saveNote()">
+            <span class="button-bg">
+                <span class="button-bg-layers">
+                    <span class="button-bg-layer button-bg-layer-1 -purple"></span>
+                        <span class="button-bg-layer button-bg-layer-2 -turquoise"></span>
+                        <span class="button-bg-layer button-bg-layer-3 -yellow"></span>
+                    </span>
+                </span>
+            <span class="button-inner">
+                <span class="button-inner-static">save</span>
+                <span class="button-inner-hover">save</span>
+            </span>
+            </button>
+
             <p id="saveNote">show note</p>
         </section>
     <script src="script.js"></script>
