--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
                 <div class="logo">งั้น:</div>
                 <ul class="nav-links">
                     <li><a href="index.html">กูจ่ายค่าเสือก</a></li>
-                     <li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">กูไม่จ่าย</a></li>
+                     <li><a href="https://www.xvideos.com/lang/thai/8">กูไม่จ่าย</a></li>
                 </ul>
             </nav>
              <section class="section-toggle">
